--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -2,7 +2,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 50px;
+  margin: 50px 0;
 }
 
 form .input-group {
