--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -27,6 +27,7 @@ form button {
   color: white;
   border: none;
   border-radius: 5px;
+  font-size: 18px;
   margin-top: 20px;
   padding: 10px 15px;
 }
