--- a/src/components/followers-list/followers-list.styles.css
+++ b/src/components/followers-list/followers-list.styles.css
@@ -3,3 +3,15 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
 }
+
+@media only screen and (max-width: 600px) {
+  .followers-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .followers-list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
