--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -36,3 +36,18 @@ form button:hover {
   cursor: pointer;
   background-color: rgb(52, 84, 181);
 }
+
+@media only screen and (max-width: 500px) {
+  form .input-group {
+    flex-direction: column;
+  }
+
+  form .input-group .form-input input {
+    margin: auto;
+    text-align: center;
+  }
+
+  form .input-group .form-input:last-child {
+    margin-top: 15px;
+  }
+}
