--- a/src/components/follower/follower.styles.css
+++ b/src/components/follower/follower.styles.css
@@ -3,11 +3,17 @@
   border: #ccc 1px solid;
   margin: 0.7rem 0;
   text-align: center;
+  transform: translateZ(0);
+  transition: transform 0.25s ease-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
 
 .card .avatar {
   border-radius: 50%;
-  width: 80px;
+  width: 100px;
 }
 
 .card button {
