--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -2,7 +2,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px 0;
+  margin-top: 50px;
 }
 
 form .input-group {
@@ -20,6 +20,10 @@ form .input-group .form-input input {
   width: 200px;
   font-size: 18px;
   padding: 10px 10px 10px 5px;
+}
+
+form .input-group .form-input input:focus {
+  outline: none;
 }
 
 form button {
